# aria-document-intelligence

./: .gitignore  README.md  pyproject.toml
PLANNING/.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SPEC.md  STATE.md
PLANNING/.planning/phases/03-async-infra/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md
backend/: pyproject.toml  pyrightconfig.json  requirements.txt
backend/src/: main.py
backend/src/api/middleware/: auth.py
backend/src/api/routers/: documents.py  qa.py  status.py  workspaces.py
backend/src/core/: celery_app.py  config.py  database.py
backend/src/models/: document.py  workspace.py
backend/src/services/: ingestion.py  qa.py  storage.py  tasks.py  vectorstore.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/[id]/: page.tsx
frontend/src/components/: DashboardNav.tsx  Hero3D.tsx  WorkspaceCard.tsx
frontend/src/hooks/: useChat.ts  useWorkspaceStatus.ts
